add .sbt & .lein