@@ -677,20 +677,9 @@ Add-Path "$MVN_HOME\bin"
 $GRADLE_HOME = Get-LatestPath "$APPSDIR\gradle*"
 Add-Path "$GRADLE_HOME\bin"
 
-Function sbt {
-    $sbtLaunch = Get-LatestPath "$APPSDIR\sbt\sbt-launch*.jar"
-    If ($sbtLaunch -ne $null) {
-        $argList  = @("$Env:JAVA_OPTS -Xms512M -Xmx1024M -Xss1M")
-        $argList += @("-XX:MaxPermSize=200M -XX:ReservedCodeCacheSize=60M")
-        $argList += @("-XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit")
-        $argList += @("-Dsbt.global.base=`"$APPSDIR\sbt`"")
-        $argList += @("-Dsbt.ivy.home=`"$APPSDIR\sbt\repository`"")
-        $argList += @("-jar $sbtLaunch")
-        $argList += $args
+Add-Path "$Env:HOME\.sbt"
 
-        start java $argList -NoNewWindow -Wait
-    }
-}
+Add-Path "$Env:HOME\.lein"
 
 # ‚»‚Ì‘¼
 $PANDOC_HOME = Get-LatestPath "$APPSDIR\pandoc*"
